[1.6.5-SNAPSHOT]

[1.6.4]
- (#71) Fixed regression with missing setCenter method in shapes after 1.3 refactor
- Fixed child UI elements receiving mouseDown events when hidden

[1.6.3]
- Added additional UiElement defer method that accepts a duration
- UI defer operations can now be cancelled

[1.6.2]
- Added support for rotated + flipped tiles
- Added TiledObject#getProperties method
- Fixed Tiled property parse notification for TSX tilesets

[1.6.1]
- Added support for animated tiles

[1.6.0]
- Added hexagonal Tiled map support
- TSX tilesets now shared across TiledMap instances when path is same - reduces memory usage

[1.5.4]
- Added more utility methods to TiledCollisionMapper
- Added TiledMap.getLayerIndexIgnoreCase
- Added support for Tile type attribute

[1.5.3]
- (#70) Fixed libgdx stage2D integration for UiContainer

[1.5.2]
- Fixed locking exception in removeAll(List) for concurrent QuadTree implementations

[1.5.1]
- Added JRebel support to UiContainer
- Added label + icon getters for TabButton
- Added removeAll() method to UiNavigation interface and implementations

[1.5.0]
WARNING: This release changes the default target timestep from 100FPS to 60FPS. 
To change it back set config.targetTimestep to 0.1f

- Updated to libGDX 1.9.6, roboVM 2.3.0 and artemis-odb 2.1.0
- (#68) Added Checkbox, Slider and RadioButton UI elements
- Added Graphics#isWindowReady()
- Added additional add/remove methods to MdxController interface
- Added direction input threshold setting to UI controller input implementations
- Added methods to clear UI hotkeys
- Added methods to set text of left and right Select buttons
- Added UiContainerOperation and ClearShaderProgramOperation for render pipelines
- Added ScrollBox#setMinHeight to override the style's minimum height
- Added UiElement#defer to defer method calls until the next frame
- Added PerformanceTracker for debugging performance issues
- Added methods to TiledCollisionMapper to map non-collision areas